--- a/index.html
+++ b/index.html
@@ -11,7 +11,21 @@
     <header>
         <h1 id="title">Adivinhe a cor!</h1>
     </header>
-    <p id="rgb-color">(168, 34, 1)</p>
+    
+    <section>
+        <p id="rgb-color">(168, 34, 1)</p>
+    </section>
+
+
+        <main>
+            <div class="ball"></div>
+            <div class="ball"></div>
+            <div class="ball"></div>
+            <div class="ball"></div>
+            <div class="ball"></div>
+            <div class="ball"></div>
+        </main>
+ 
 
     <script src="script.js"></script>
 </body>
