--- a/index.html
+++ b/index.html
@@ -11,21 +11,21 @@
     <header>
         <h1 id="title">Adivinhe a cor!</h1>
     </header>
-    
+
     <section>
         <p id="rgb-color">(168, 34, 1)</p>
     </section>
 
 
-        <main>
+        <div id="colors">
             <div class="ball"></div>
             <div class="ball"></div>
             <div class="ball"></div>
             <div class="ball"></div>
             <div class="ball"></div>
             <div class="ball"></div>
-        </main>
- 
+        </div>
+        <h2 id="answer">Escolha uma cor</h2>
 
     <script src="script.js"></script>
 </body>
